# TSAD

./: .gitignore  README.md  README_tune_swift_params.md  SWIFT_Framework_Documentation.md  example_usage.py  predictions.csv  pyproject.toml  run_all_tunings.py  scores.csv  tune_swift_params.py
configs/ASD1/: catch.toml  catch_0.546.toml  catch_0.64.toml
configs/base/: swift.toml
configs/common_dataset/: catch.toml
datasets/: test.py
docs/: WGCF_Framework_Documentation.md  hyperparameter_tuning_guide.md  optuna_progress_management.md
scripts/: create_bsm1_dataset_automatically.py  long2wide.py
scripts/create_mini_datasets/: create_mini_datasets.sh
scripts/tuning/: adaptive_tuning.sh  example_with_resume.sh  example_with_visualization.sh
scripts/z/: anomaly_injector.py  long2wide.py
src/: catch_bsm1_dry.py
src/CATCH/: catch_pipeline.py
src/catch/: catch_pipeline.py
src/evaluation/: test.py
src/tools/: plot.py
temp/: best0.88.toml  catch_bsm1_dry.py  create_bsm1_dataset_automatically.py  find_anomalies.py  score_anomalies.py
temp/metrics-bak/: classification_metrics_label.py  classification_metrics_score.py  utils.py
tests/: tensor.txt  test.py
tests/filter/: test_filter.py
tests/ft/: test_ft.py
tests/numpy/: test_save.py
tests/pandas/: iloc.py  (+1 more)
tools/: create_mini_datasets.py
ts_benchmark/: catch_bsm1_dry.py  catch_common_dataset.py  find_anomalies.py  optuna_manager.py  score_anomalies.py  tune_params.py  tune_params_swift copy.py  tune_params_swift.py  tune_params_wgcf copy.py  tune_params_wgcf.py  visualize_optuna.py
(+128 files in other folders)
