[project]
name = "TSAD"
version = "0.1.0"
description = "Time Series Anomaly Detection"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
    "ptwt>=0.1.9",
    "scikit-learn>=1.7.0",
    "scipy>=1.15.3",
    "statsmodels>=0.14.4",
    "tomli>=2.2.1",
    "tomli-w>=1.2.0",
    "torch==2.5.0",
]
